# AI_agent

./: MCP_SETUP_GUIDE.md  REQUIREMENTS_GUIDE.md
ai-agent/: .env.example  package.json
ai-agent/examples/: example-usage.js
ai-agent/src/: index.js
ai-agent/src/agent/: aiAgent.js
ai-agent/src/config/: index.js
ai-agent/src/integrations/: confluence.js  javaProcessor.js  jira.js
ai-agent/src/utils/: logger.js
mcp-confluence-python/: .env.example  BEARER_TOKEN_GUIDE.md  README.md  pyproject.toml  requirements.txt
mcp-confluence-python/mcp_confluence_server/: __init__.py  client.py  config.py  server.py
mcp-confluence-server/: .env.example  package.json
mcp-confluence-server/src/: config.ts  confluence-client.ts
mcp-jira-python/: .env.example  README.md  pyproject.toml  requirements.txt
mcp-jira-python/mcp_jira_server/: __init__.py  client.py  config.py  server.py
mcp-jira-server/: .env.example  package.json
mcp-jira-server/src/: config.ts  index.ts  jira-client.ts
